<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/main" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/opensource"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/main" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opensource_content" />

            <Button
                android:id="@+id/github"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/github"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/auteur"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/main" />

            <TextView
                android:id="@+id/dewep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auteur_content" />

            <Button
                android:id="@+id/email"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="12sp" />
        </LinearLayout>

</ScrollView>