<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_clair"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_epitech"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/main"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/login" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_unix"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/main"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="20dp"
        android:hint="@string/facultatif"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/logas_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logas"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/main"
        android:textIsSelectable="false"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/logas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/logas"
        android:visibility="invisible" >

    </EditText>

    <TextView
        android:id="@+id/settings_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textIsSelectable="false" />

    <Button
        android:id="@+id/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/enregistrer" />

    <TextView
        android:id="@+id/dewep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/signature"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/main"
        android:textIsSelectable="true"
        android:textSize="12sp" />

</LinearLayout>